--- a/css/cardsColaboradores.css
+++ b/css/cardsColaboradores.css
@@ -15,9 +15,107 @@
   width: 100%;
 }
 
+/* OLIVER */
+.cardsOliver {
+  background: var(--fundo-pagina-portfolio);
+}
+
 .oliver {
   width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  padding: 5px;
+  background: linear-gradient(#2c3333, #395b64);
+  color: #0a0c0d;
+  position: relative;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
 }
+
+.cardsOliver:hover .oliver {
+  transform: rotateY(180deg);
+}
+
+.oliverCardFrente,
+.oliverCardCostas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  /* Safari */
+  backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.3rem;
+  transform: rotateX(0deg)
+}
+
+.oliverCardCostas {
+  transform: rotateY(180deg);
+}
+
+.oliverCardHover {
+  margin-top: 1.0rem;
+  font-size: 1.2rem;
+}
+
+.cardCostasTop,
+.cardCostasBottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2.7rem;
+}
+
+.cardCostasBottom {
+  gap: 1.5rem;
+}
+
+.oliverCardCostas .nomeOliver,
+.oliverCardCostas .aboutOliver {
+  margin: 0;
+}
+
+.imgCardOliver {
+  width: 110px;
+  border-radius: 50%;
+}
+
+.nomeOliver {
+  color: #041017;
+  font-weight: bold;
+  font-size: 2.7rem;
+}
+
+.aboutOliver {
+  font-size: 2.0rem;
+  color: #eefdfd;
+  font-weight: 400;
+  word-wrap: break-word;
+  line-height: 25px;
+}
+
+.citacao {
+  font-size: 1.7rem;
+}
+
+.iconsOliver i {
+  display: inline-block;
+  color: #a5c8ca;
+  text-decoration: none;
+  cursor: pointer;
+  margin-top: 25px;
+}
+
+.iconsOliver:visited i {
+  color: #282828;
+}
+/*  */
 
 /* ----klaus----- */
 .klaus {
